--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
     <div class="app">
         <header>
             <h1>Tap music</h1>
-            <p>Make music with your own tap</p>
+            <p>Make music with your own tap
+
+
+            </p>
+
         </header>
+
+        <p>(Tap on any colour following and creat your own tune)</p>
+
         <div class="visual">
+
 
         </div>
         <div class="pads">
